# Ollama-LiteRT-LM-cpp

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD  BUILD.cxxbridge_cmd.bazel  CMakeLists.txt  LiteRT-LM  MODULE.bazel  README.md  WORKSPACE  abseil.patch  bazel-Ollama-LiteRT-LM-cpp  bazel-bin  bazel-cpp  bazel-out  bazel-testlogs  config.cpp  config.h  config.json  llm_engine.cpp  llm_engine.h  main.cpp  server_mode.cpp  server_mode.h  system_prompt.txt  tui_interface.cpp  tui_interface.h  utils.cpp  utils.h
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/: WORKSPACE
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/.github/workflows/: ci-build-mac.yml
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/c/: engine.cc  engine.h
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/python/litert_lm/: BUILD  __init__.py  _ffi.py  conversation.py  engine_test.py  interfaces.py
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/python/litert_lm_builder/: README.md  __init__.py  litertlm_builder_cli_test.py  litertlm_builder_test.py  litertlm_core.py  litertlm_core_test.py
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/python/litert_lm_cli/: common.py  main_test.py
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/runtime/components/: lora.cc  lora_manager.cc  sampler_factory.cc
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/runtime/conversation/: BUILD  prompt_utils.cc  prompt_utils.h
LiteRT-LM-c7b77b579596966b60333fd393a1ff49026545ba/runtime/core/: engine_advanced_impl.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  (+2 more)
(+50 files in other folders)
